# ctf-butler

./: .gitignore  Cargo.toml  build.rs  settings.example.json
src/: main.rs  state.rs
src/commands/: ctf.rs  help.rs  mod.rs  ping.rs
src/settings/: constants.rs  mod.rs
