[package]
name = "ctf-butler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
jsondb = "0.4.0"
poise = "0.5.6"
serde = "1.0.189"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
